# uzkge

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
c-uzkge/: Cargo.toml  c-uzkge.h  examples.c
c-uzkge/src/: anemoi.rs  ed_on_bn254.rs  lib.rs  matchmaking.rs  shuffle.rs
contracts/solidity/: .npmignore  hardhat.config.js  package.json
contracts/solidity/contracts/: BN254.sol  BytesLib.sol  ChaumPedersenDLVerifier.sol  EdOnBN254.sol  PlonkVerifier.sol  Transcript.sol  Utils.sol
contracts/solidity/contracts/libraries/: BN254.sol  BytesLib.sol  EdOnBN254.sol  Transcript.sol  Utils.sol
contracts/solidity/contracts/shuffle/: ExternalTranscript.sol  RevealVerifier.sol  ShuffleService.sol  ShuffleVerifier.sol  ShuffleVerifierKey1.sol  ShuffleVerifierKey1_20.sol  ShuffleVerifierKey1_52.sol  ShuffleVerifierKey2.sol  ShuffleVerifierKey2_20.sol  ShuffleVerifierKey2_52.sol  VerifierKey.sol  VerifierKeyExtra1_20.sol  VerifierKeyExtra1_52.sol  VerifierKeyExtra2_20.sol  VerifierKeyExtra2_52.sol  VerifierKey_20.sol  VerifierKey_52.sol
contracts/solidity/contracts/verifier/: ChaumPedersenDLVerifier.sol  Groth16Verifier.sol  PlonkVerifier.sol
contracts/solidity/test/: plonk.js  plonk_20.js  plonk_52.js  reveal.js
match_making/: Cargo.toml
match_making/src/: lib.rs  match_making.rs  test.rs
matchmaking/: Cargo.toml  README.md
matchmaking/src/: build_cs.rs  lib.rs  matchmaking.rs  test.rs
matchmaking/src/gen_params/: mod.rs  params.rs  setup.rs
plonk/: Cargo.toml  README.md
plonk/parameters/: VerifierKeyExtra1.sol
plonk/src/: errors.rs  lib.rs
plonk/src/anemoi/: mod.rs  tests.rs
plonk/src/chaum_pedersen/: dl.rs
plonk/src/gen_params/: mod.rs  solidity.rs
plonk/src/poly_commit/: mod.rs  pcs.rs
plonk/src/shuffle/: babyjubjub.rs  mod.rs  remark.rs  trace.rs
plonk/src/turboplonk/: helpers.rs  indexer.rs  prover.rs  verifier.rs
plonk/src/turboplonk/constraint_system/: mod.rs
plonk/src/turboplonk/constraint_system/anemoi/: mod.rs
plonk/src/turboplonk/constraint_system/ecc/: const_base_ecc.rs  mod.rs  nonconst_base_ecc.rs
plonk/src/turboplonk/constraint_system/shuffle/: permutation.rs  remark.rs
plonk/src/turboplonk/constraint_system/turbo/: mod.rs
plonk/src/utils/: serialization.rs  transcript.rs
shuffle/: .gitignore  Cargo.toml  README.md
shuffle/src/: build_cs.rs  error.rs  keygen.rs  lib.rs  mask.rs  reveal.rs  reveal_with_snark.rs  sdk.rs  tests.rs  utils.rs
shuffle/src/gen_params/: mod.rs  params.rs  setup.rs
shuffle/src/parameters/: errors.rs  mod.rs  params.rs  setup.rs
shuffle/wasm/: .gitignore  Cargo.toml
shuffle/wasm/src/: card_maps.rs  lib.rs  poker.rs  utils.rs
shuffle/wasm/tests/: web.rs
uzkge/: Cargo.toml  README.md
uzkge/parameters/: VerifierKey.sol  VerifierKeyExtra1.sol  VerifierKeyExtra2.sol
uzkge/src/: errors.rs  lib.rs
uzkge/src/anemoi/bn254/: mod.rs
uzkge/src/chaum_pedersen/: dl.rs
uzkge/src/gen_params/: mod.rs  setup.rs
uzkge/src/plonk/: helpers.rs  indexer.rs  prover.rs  verifier.rs
uzkge/src/plonk/constraint_system/: mod.rs
uzkge/src/plonk/constraint_system/anemoi/: mod.rs
uzkge/src/plonk/constraint_system/ecc/: const_base_ecc.rs  mod.rs  nonconst_base_ecc.rs
uzkge/src/plonk/constraint_system/shuffle/: mod.rs  permutation.rs  remark.rs
uzkge/src/plonk/constraint_system/turbo/: mod.rs
uzkge/src/poly_commit/: field_polynomial.rs  kzg_poly_commitment.rs  pcs.rs
uzkge/src/shuffle/: mod.rs  permutation.rs  remark.rs  trace.rs
uzkge/src/utils/: mod.rs  serialization.rs
wasm/: Cargo.toml  demo.js
wasm/src/: anemoi.rs  ed_on_bn254.rs  lib.rs  matchmaking.rs  shuffle.rs
wasm/tests/: web.rs
zplonk/: Cargo.toml  README.md
zplonk/parameters/: VerifierKey.sol  VerifierKeyExtra2.sol
zplonk/src/: errors.rs  gen_params.rs  lib.rs  params.rs
zplonk/src/anemoi/: mod.rs  tests.rs  traces.rs
zplonk/src/anemoi/bn254/: mod.rs
zplonk/src/anemoi/mds/: mod.rs
zplonk/src/chaum_pedersen/: dl.rs
zplonk/src/gen_params/: mod.rs  setup.rs
zplonk/src/poly_commit/: errors.rs  field_polynomial.rs  kzg_poly_commitment.rs  mod.rs  pcs.rs
zplonk/src/shuffle/: babyjubjub.rs  mod.rs  permutation.rs  trace.rs
zplonk/src/turboplonk/: errors.rs  helpers.rs  indexer.rs  mod.rs  prover.rs  transcript.rs  verifier.rs
zplonk/src/turboplonk/constraint_system/: mod.rs
zplonk/src/turboplonk/constraint_system/anemoi/: mod.rs
zplonk/src/turboplonk/constraint_system/shuffle/: mod.rs  remark.rs
zplonk/src/turboplonk/constraint_system/turbo/: mod.rs
zplonk/src/utils/: errors.rs  mod.rs  prelude.rs  serialization.rs
