[workspace]
members = [
  "uzkge",
  "shuffle",
  "shuffle/wasm",
  "matchmaking",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
panic = "abort"

[profile.test]
opt-level = 2
lto = "off"
incremental = true
debug-assertions = true
debug = true

[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra", rev = "065cd24" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", rev = "065cd24" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", rev = "065cd24" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", rev = "065cd24" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra", rev = "065cd24" }
ark-ed-on-bn254 = { git = "https://github.com/arkworks-rs/algebra", rev = "065cd24" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "8e5c347"  }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", rev = "4020fbc" }
ark-relations = { git = "https://github.com/arkworks-rs/snark", rev = "0759f94" }
ark-std = { git = "https://github.com/arkworks-rs/std", rev = "e18cd56" }