[package]
name = "c-uzkge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
ethabi.workspace = true
bincode.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
ark-ed-on-bn254 = { workspace = true, features = ["r1cs"] }
uzkge = { workspace = true, features = ["shuffle"] }
zmatchmaking = { workspace = true }
zshuffle = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
