[package]
name = "zmatchmaking"
version = "0.1.0"
edition = "2021"

[dependencies]
zplonk = { path = "../zplonk" }
num-bigint = "0.4.3"
num-integer = "0.1.45"

[dependencies.ark-ff]
version = "0.4"
default-features = false
features = ["asm"]

[dependencies.ark-std]
version = "0.4"
default-features = false

[dependencies.ark-bn254]
version = "0.4"
default-features = false
features = ["curve"]

