[package]
name = "zshuffle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = 'gen-params'
path = 'src/parameters/setup.rs'
required-features = ['gen']

[dependencies]
zplonk = { path = "../zplonk" }
bincode = '1.3.1'
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
rayon = { version = "1.7.0", optional = true}
structopt =  { version = "0.3.26", optional = true}

[dependencies.ark-ec]
version = '0.4.0'
default-features = false

[dependencies.ark-ff]
version = '0.4.0'
default-features = false
features = ['asm']

[dependencies.ark-std]
version = '0.4.0'
default-features = false

[dependencies.ark-serialize]
version = '0.4.0'
default-features = false
features = ["derive"]

[dependencies.ark-bn254]
version = '0.4.0'
default-features = false
features = ['curve']

[dependencies.ark-ed-on-bn254]
version = '0.4.0'
default-features = false

[dev-dependencies]
hex = "0.4"

[features]
default = []
std = [
  "ark-ec/std",
  "ark-std/std",
  "ark-ff/std",
  "ark-bn254/std",
  "zplonk/std"
]
parallel = [
  "rayon",
  "ark-std/parallel",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "zplonk/parallel"
]
no_vk = []
gen = ["parallel", "structopt"]
