[package]
name = "zplonk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen-params"
path = "src/gen_params/setup.rs"
required-features = ["gen"]

[dependencies]
bincode = "1.3"
itertools = "0.12"
lazy_static = "1.4"
num-bigint = "0.4"
num-integer = "0.1"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
rayon = { version = "1.7", optional = true}
structopt =  { version = "0.3", optional = true}

[dependencies.ark-ec]
version = "0.4"
default-features = false

[dependencies.ark-ff]
version = "0.4"
default-features = false
features = ["asm"]

[dependencies.ark-std]
version = "0.4"
default-features = false

[dependencies.ark-poly]
version = "0.4"
default-features = false

[dependencies.ark-serialize]
version = "0.4"
default-features = false
features = ["derive"]

[dependencies.ark-bn254]
version = "0.4"
default-features = false
features = ["curve"]

[dependencies.ark-ed-on-bn254]
version = "0.4"
default-features = false

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = []
std = [
  "ark-ec/std",
  "ark-std/std",
  "ark-ff/std",
  "ark-bn254/std"
]
parallel = [
  "rayon",
  "ark-std/parallel",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "ark-poly/parallel"
]
debug = []
no_vk = []
no_srs = []
gen = ["parallel","structopt"]
shuffle = []
anemoi = []
lightweight = []
