[package]
name = "zshuffle-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
zshuffle = { path = "../" }
zplonk = { path = "../../zplonk" }
ark-ec = { version= "0.4", default-features = false }
ark-ff = { version= "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
ark-bn254 = { version = "0.4", default-features = false, features = ["curve"] }
ark-ed-on-bn254 = { version = "0.4", default-features = false }
bincode = { version = "1.3", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
num-bigint = "0.4.3"
rand_core = { version = "0.6", features = ["getrandom"] }
rand_chacha = { version = "0.3", default-features= false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.4"
thiserror = { version = "1.0" }
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["console"] }