[package]
name = "zshuffle-wasm"
description = "WASM SDK for encrypt and shuffle cards"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
zshuffle.workspace = true
uzkge = { workspace = true, features = ["shuffle"] }

ark-ec.workspace = true
ark-ff.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true
ark-bn254.workspace = true
ark-ed-on-bn254.workspace = true
bincode.workspace = true
getrandom.workspace = true
hex.workspace = true
num-bigint.workspace = true
once_cell.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
rand_chacha.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde-wasm-bindgen.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
web-sys.workspace = true